changing evolve button to link

--- a/sim.html
+++ b/sim.html
@@ -9,7 +9,7 @@
 			<script src="evolve.js"></script>
 			<script src="jquery_functions.js"></script>
 
-  		<title>GA</title>
+  		<title>genetic algorithm</title>
  	</head>
 
 	<body class= "bodyContainer" class="works_on_smartphone">
