--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 			<link rel="icon" href="/favicon.ico" type="image/x-icon">
   		<script src="behavior.js"></script>
-  		<title>GA</title>
+  		<title>genetic algorithm</title>
  	</head>
 
  	<body class= "bodyContainer" class="works_on_smartphone">
