--- a/code.html
+++ b/code.html
@@ -8,7 +8,7 @@
   		<link rel="shortcut icon" href="favicon.ico" >
 
   		<script src="behavior.js"></script>
-  		<title>GA</title>
+  		<title>genetic algorithm</title>
  	</head>
 
  	<body class= "bodyContainer" class="works_on_smartphone">
@@ -88,9 +88,25 @@
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div> -->
 
-					<div id="gitBox" class="github-card" data-github="siafahim" data-width="98%" data-height="320" data-theme="medium">
+					<!-- <div id="gitBox" class="github-card" data-github="siafahim" data-width="98%" data-height="320" data-theme="medium">
 						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-					</div>
+					</div> -->
+
+					<article class="card" data-gh-project="siafahim/WeaselGA">
+					  <header class="card-header">
+					    <p class="card-suptitle">On <a href= "https://github.com/SiaFahim/WeaselGA" title="view on GitHub">GitHub</a></p>
+					    <h1 class="card-title"><a href="https://github.com/SiaFahim/WeaselGA" title="View more">weasel genetic algorithm</a></h1>
+					  </header>
+					  <div class="card-body">
+					    <dl class="card-details">
+					      <dt>Forked</dt>
+					      <dd class="fork"><a href="https://github.com/SiaFahim/WeaselGA/fork" title="View fork details"><!-- Fork count via javascript --></a></dd>
+					      <dt>Starred</dt>
+					      <dd class="star"><a href="https://github.com/SiaFahim/WeaselGA/stargazers " title="View fork details"><!-- Stargazers count via javascript --></a></dd>
+					    </dl>
+					  </div>
+					</article>
+
 
 			</aside>
 		</main>
