--- a/code.html
+++ b/code.html
@@ -92,20 +92,7 @@
 						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 					</div> -->
 
-					<article class="card" data-gh-project="siafahim/WeaselGA">
-					  <header class="card-header">
-					    <p class="card-suptitle">On <a href= "https://github.com/SiaFahim/WeaselGA" title="view on GitHub">GitHub</a></p>
-					    <h1 class="card-title"><a href="https://github.com/SiaFahim/WeaselGA" title="View more">weasel genetic algorithm</a></h1>
-					  </header>
-					  <div class="card-body">
-					    <dl class="card-details">
-					      <dt>Forked</dt>
-					      <dd class="fork"><a href="https://github.com/SiaFahim/WeaselGA/fork" title="View fork details"><!-- Fork count via javascript --></a></dd>
-					      <dt>Starred</dt>
-					      <dd class="star"><a href="https://github.com/SiaFahim/WeaselGA/stargazers " title="View fork details"><!-- Stargazers count via javascript --></a></dd>
-					    </dl>
-					  </div>
-					</article>
+					<github-card user="siafahim"></github-card>
 
 
 			</aside>
