--- a/code.html
+++ b/code.html
@@ -6,7 +6,7 @@
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<link rel="shortcut icon" href="favicon.ico" >
-
+  		<link rel="import" href="gitcard.html" >
   		<script src="behavior.js"></script>
   		<title>genetic algorithm</title>
  	</head>
