--- a/code.html
+++ b/code.html
@@ -74,26 +74,7 @@
 
 			<aside class = "sideBox">
 
-					<!-- <div id="disqus_thread">
-						<script>
-							(function() { // DON'T EDIT BELOW THIS LINE
-							var d = document, s = d.createElement('script');
-
-							s.src = '//smartrobot.disqus.com/embed.js';
-
-							s.setAttribute('data-timestamp', +new Date());
-							(d.head || d.body).appendChild(s);
-							})();
-						</script>
-						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-					</div> -->
-
-					<!-- <div id="gitBox" class="github-card" data-github="siafahim" data-width="98%" data-height="320" data-theme="medium">
-						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-					</div> -->
-
-					<github-card user="siafahim"></github-card>
-
+					<github-card class:"gitcard" user="siafahim"></github-card>
 
 			</aside>
 		</main>
