--- a/gitcard.html
+++ b/gitcard.html
@@ -4,13 +4,15 @@
       display: inline-block;
     }
     .user {
-      font-family: "Helvetica", Arial, sans-serif;
-      display: inline-block;
-      width: 265px;
+      font-family: 'Avenir', "Century Gothic", "sans-serif";
+/*      display: inline-block;*/
+      width: 98%;
+      min-width: 180px;
       height: 300px;
-      overflow: hidden;
+      margin: 0 auto;
+/*      overflow: hidden;*/
       border-radius: 6px;
-      position: relative;
+/*      position: relative;*/
       background-color: #2E353C;
       text-align: center;
       color: #fff;
