--- a/code.html
+++ b/code.html
@@ -75,6 +75,19 @@
 			<aside class = "sideBox">
 
 					<github-card class:"gitcard" user="siafahim"></github-card>
+					<div id="disqus_thread">
+					<script>
+						(function() { // DON'T EDIT BELOW THIS LINE
+						var d = document, s = d.createElement('script');
+
+						s.src = '//smartrobot.disqus.com/embed.js';
+
+						s.setAttribute('data-timestamp', +new Date());
+						(d.head || d.body).appendChild(s);
+						})();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+				</div>
 
 			</aside>
 		</main>
