--- a/gitcard.html
+++ b/gitcard.html
@@ -10,6 +10,7 @@
       min-width: 200px;
       height: 300px;
       margin: 0 auto;
+      margin-bottom: 45px;
 /*      overflow: hidden;*/
       border-radius: 6px;
 /*      position: relative;*/
