--- a/gitcard.html
+++ b/gitcard.html
@@ -28,7 +28,7 @@
       display: none;
     }
     .user-data {
-      background: #fff url('webcomponent/github.png') no-repeat 5px 5px;
+      background: #fff url('https://goo.gl/Yxulkn') no-repeat 5px 5px;
       background-size: 25px;
       height: 85px;
       border: 1px solid #D5D5D5;
@@ -85,7 +85,7 @@
       line-height: 1.7em;
     }
     .spinner {
-      background: url('webcomponent/spinner.gif') no-repeat center center;
+      background: url('https://goo.gl/VCBDYX') no-repeat center center;
     }
     a.user-github-url,
     a.user-repos-url,
