--- a/gitcard.html
+++ b/gitcard.html
@@ -28,7 +28,8 @@
       display: none;
     }
     .user-data {
-      background: #fff url('https://goo.gl/Yxulkn') no-repeat 5px 5px;
+      background: #fff url('http://i.imgur.com/mLEkS8W.gif') no-repeat 5px 5px;
+      /*https://goo.gl/Yxulkn*/
       background-size: 25px;
       height: 85px;
       border: 1px solid #D5D5D5;
