--- a/gitcard.html
+++ b/gitcard.html
@@ -28,8 +28,7 @@
       display: none;
     }
     .user-data {
-      background: #fff url('http://i.imgur.com/mLEkS8W.gif') no-repeat 5px 5px;
-      /*https://goo.gl/Yxulkn*/
+      background: #fff url('https://goo.gl/Yxulkn') no-repeat 5px 5px;
       background-size: 25px;
       height: 85px;
       border: 1px solid #D5D5D5;
@@ -86,7 +85,8 @@
       line-height: 1.7em;
     }
     .spinner {
-      background: url('https://goo.gl/VCBDYX') no-repeat center center;
+      background: url('http://i.imgur.com/mLEkS8W.gif') no-repeat center center;
+      /*https://goo.gl/VCBDYX*/
     }
     a.user-github-url,
     a.user-repos-url,
