--- a/gitcard.html
+++ b/gitcard.html
@@ -85,8 +85,7 @@
       line-height: 1.7em;
     }
     .spinner {
-      background: url('http://i.imgur.com/mLEkS8W.gif') no-repeat center center;
-      /*https://goo.gl/VCBDYX*/
+      background: url('https://goo.gl/VCBDYX') no-repeat center center;
     }
     a.user-github-url,
     a.user-repos-url,
