--- a/code.html
+++ b/code.html
@@ -24,6 +24,7 @@
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
 				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
 			</ul>
