--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
 				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
 			</ul>
@@ -56,7 +57,7 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<h3 id="articleTitle">natural selection in machine learning</h3>
+					<!-- <h3 id="articleTitle">natural selection in machine learning</h3> -->
 					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%">
 				</header>
 
