--- a/sim.html
+++ b/sim.html
@@ -6,8 +6,9 @@
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<link rel="shortcut icon" href="favicon.ico" >
 			<script src="jquery-2.1.4.js"></script>
-			<script src="evolve.js"></script>
 			<script src="jquery_functions.js"></script>
+			<script src="evolve.js"></script>
+
 
   		<title>genetic algorithm</title>
  	</head>
@@ -25,6 +26,7 @@
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
 				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
 			</ul>
@@ -77,12 +79,13 @@
 					</div>
 
 					<div id="costDiv">
-						<p>population:</p> <p id="cost">0</p>
+						<p>cost:</p> <p id="cost">0</p>
 					</div>
 				</div>
 
 				<div id="run">
 					<a href="sim.html">evolve</a>
+					<!-- href="sim.html" -->
 				</div>
 					
 				<p id="temp">
