--- a/algorithm.html
+++ b/algorithm.html
@@ -33,7 +33,7 @@
 			<div class="imageBox">	
 				<div class="headImg">
 					<a href="https://en.wikipedia.org/wiki/Weasel_program">
-						<img src="RoboHead.png" alt="Smiley face" height="80" width="100" >
+						<img src="RoboHead.png" alt="Smiley face" height="70" width="90" >
 					</a>
 					
 				</div>
@@ -57,8 +57,7 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<!-- <h3 id="articleTitle">natural selection in machine learning</h3> -->
-					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%">
+					<h3 id="articleTitle">natural selection in machine learning</h3>
 				</header>
 
 				<div id="content">
@@ -199,12 +198,5 @@
 
 		<script id="dsq-count-scr" src="//smartrobot.disqus.com/count.js" async></script>
 	</body>
-
-	<!-- script for the widget to show social stuff-->
-	<script>
-	  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
-	    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
-	  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/28662/script.js');
-	</script>
 
  </html>
