--- a/sim.html
+++ b/sim.html
@@ -6,14 +6,15 @@
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<link rel="shortcut icon" href="favicon.ico" >
 			<script src="jquery-2.1.4.js"></script>
-			<script src="jquery_functions.js"></script>
 			<script src="evolve.js"></script>
+			<script src="jquery_functions.js"></script>
+			
 
 
   		<title>genetic algorithm</title>
  	</head>
 
-	<body class= "bodyContainer" class="works_on_smartphone">
+	<body class= "bodyContainer">
 		<div id="fb-root"><script>(function(d, s, id) {
 					  var js, fjs = d.getElementsByTagName(s)[0];
 					  if (d.getElementById(id)) return;
@@ -25,7 +26,7 @@
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
-				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="index.html">about</a></li>
 				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
