--- a/algorithm.html
+++ b/algorithm.html
@@ -11,7 +11,7 @@
   		<title>genetic algorithm</title>
  	</head>
 
- 	<body class= "bodyContainer" class="works_on_smartphone">
+ 	<body class= "bodyContainer">
  		<div id="fb-root">
 	 		<script>(function(d, s, id) {
 			  var js, fjs = d.getElementsByTagName(s)[0];
@@ -25,7 +25,7 @@
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
-				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="index.html">about</a></li>
 				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
@@ -57,7 +57,8 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<h3 id="articleTitle">natural selection in machine learning</h3>
+					<h3 id="articleTitle">Natural Selection with Machine Learning</h3>
+					<img src="http://goo.gl/eM5iFJ" class="pic" height="80%" width="80%">
 				</header>
 
 				<div id="content">
@@ -68,7 +69,7 @@
 						machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm”
 						and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
 
-					<h3>genetic algorithm basics</h3>
+					<h3>Genetic Algorithm Basics</h3>
 
 					<p>The basic approach to GAs is to generate a bunch of “answer candidates” and use some sort of feedback to figure out
 						how close the candidate is to optimal. Far-from-optimal candidates literally die and are never seen again.
@@ -78,7 +79,7 @@
 						survival of the fittest, or are allowed to produce offspring who may have more desirable traits and adhere to
 						natural selection.</p>
 
-					<h3>the chromosome</h3>
+					<h3>The Chromosome</h3>
 
 					<p>The chromosome is a representation of a solution candidate. In our case, the chromosome itself is a string.
 						Let’s assume that all chromosomes have a length of 13 characters (the same as “Hello, World!”). Here are some
@@ -95,13 +96,13 @@
 					<p>Obviously that last one is the “correct” (or globally-optimum) chromosome. But how do we measure the optimality
 						of a chromosome?</p>
 
-					<h3>cost function</h3>
+					<h3>Cost Function</h3>
 
 					<p>The cost function (or error function, or fitness function as the inverse) is some sort of measure of the
 						optimality of a chromosome. If we’re calling it “fitness function” then we’re shooting for higher scores,
 						and if we’re using “cost function” then we’re looking for low scores.</p>
 
-					<h3>mating and death</h3>
+					<h3>Mating and Death</h3>
 
 					<p>Mating is a fact of life, and we use it tons in GAs. Mating is a magical moment that two chromosomes
 						in love with each other share. The technical term for mating is “crossover”, but I’ll continue calling it
@@ -131,7 +132,7 @@
 						but also an angel child that has the best traits of both.Mating is how you get from one generation
 						of genes to the next.</p>
 
-					<h3>mutation</h3>
+					<h3>Mutation</h3>
 
 					<p>Mating alone has a problem: in-breeding. If all you do is mate your candidates to go from generation
 						to generation, you’ll get stuck near a “local optimum”: an answer that’s pretty good but not necessarily
@@ -150,7 +151,7 @@
 						It’s a completely random process by which you target an unsuspecting chromosome and blast it with just enough
 						radiation to make one of its letters randomly change.</p>
 
-					<h3>the population</h3>
+					<h3>The Population</h3>
 
 					<p id="lastP">The population is a group of chromosomes. The population generally remains the same size but will
 						typically evolve to better average cost scores over time. You get to choose your population size.
