--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<head>
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<link rel="stylesheet" type="text/css" href="styles.css">
-			<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-			<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
   		<script src="behavior.js"></script>
   		<title>genetic algorithm</title>
  	</head>
 
- 	<body class= "bodyContainer" class="works_on_smartphone">
+ 	<body class= "bodyContainer">
  		<div id="fb-root">
 	 		<script>(function(d, s, id) {
 			  var js, fjs = d.getElementsByTagName(s)[0];
@@ -25,7 +25,7 @@
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
-				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="index.html">about</a></li>
 				<li class="liFlex"><a href="algorithm.html">algorithm</a></li>
 				<li class="liFlex"><a href="code.html">code</a></li>
 				<li class="liFlex"><a href="sim.html">simulator</a></li>
@@ -57,105 +57,30 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<!-- <h3 id="articleTitle">natural selection in machine learning</h3> -->
-					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%">
+					<h3 id="articleTitle">About</h3>
 				</header>
 
 				<div id="content">
-					<p>Genetic algorithms are inspired by nature and evolution, which is seriously cool to me. It’s no surprise, either,
-						that artificial neural networks (“NN”) are also modeled from biology: evolution is the best general-purpose learning
-						algorithm we’ve experienced, and the brain is the best general-purpose problem solver we know. These are two very
-						important pieces of our biological existence, and also two rapidly growing fields of artificial intelligence and
-						machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm”
-						and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
+					<p>Hi, My name is Siavash Fahimi and this is my first website. the process of building this website and learning many subjects for the first time was really rewarding and i am very excited that it’s almost completed.</p>
 
-					<h3>genetic algorithm basics</h3>
+					<h3>Topic</h3>
 
-					<p>The basic approach to GAs is to generate a bunch of “answer candidates” and use some sort of feedback to figure out
-						how close the candidate is to optimal. Far-from-optimal candidates literally die and are never seen again.
-						Close-to-optimal candidates combine with each other and maybe mutate slightly; this is an attempt to modify
-						the candidates from time to time and see if they get closer to optimal or farther from optimal. These “answer
-						candidates” are called chromosomes. Chromosomes mate, produce offspring, and mutate. They either die due to
-						survival of the fittest, or are allowed to produce offspring who may have more desirable traits and adhere to
-						natural selection.</p>
+					<p>At first when I decided to start the level 2 challenge for Holberton School, it seemed a pretty difficult challenge. The biggest question in my head was, "what should the website be about?" and to answer that question I googled “machine learning algorithm in javascript” why this? because Machine Learning is the subject that I’m passionate about, also the reason for applying at Holberton School. I chose javascript because I had to learn js for the website anyway, so it could save me time to just learn one language for both the website and the algorithm, beside HTML and CSS.</p>
 
-					<h3>the chromosome</h3>
+					<p>I landed on <a href="http://burakkanber.com/blog/machine-learning-genetic-algorithms-part-1-javascript/">Burak Kanber's blog</a> which he explained Genetic Algorithm in a short and simple way. But when I got to the code section of his blog, I felt totally lost and I couldn’t understand a line of that code. Then I decided to write the code for algorithm from scratch so I can really learn it.</p>
 
-					<p>The chromosome is a representation of a solution candidate. In our case, the chromosome itself is a string.
-						Let’s assume that all chromosomes have a length of 13 characters (the same as “Hello, World!”). Here are some
-						possible chromosomes that could be solution candidates for our problem:</p>
+					<p>I wish I had more time to write about the whole learning process and all the interesting challenges that I faced to write the algorithm and build the website, but I must submit my project in about three hours and I’m kind of behind for my content. But I will deffinatelly keep wrking on this page ang I'll host it on GitHub projec page.</p>
 
-					<ul>
-						<li>Gekmo+ xosmd!</li>
-						<li>Gekln, worle”</li>
-						<li>Fello, wosld!</li>
-						<li>Gello, wprld!</li>
-						<li>Hello, world!</li>
-					</ul>
+					<h3>Pages of this website</h3>
 
-					<p>Obviously that last one is the “correct” (or globally-optimum) chromosome. But how do we measure the optimality
-						of a chromosome?</p>
+					<p>In the “algorithm” page I copied the content of <a href="http://burakkanber.com/blog/machine-learning-genetic-algorithms-part-1-javascript/">Burak Kanber's blog</a> because he has explained this topic on his blog nicely. Although my algorithm is slightly different than what you will read there, but they both work in similar ways.
+					</p>
 
-					<h3>cost function</h3>
+					<p>The “code” section of this website is where I explain my code and what each js function does in the algorithm. I haven’t wrote anything for this section yet, but I hope I can write something before submission.</p>
 
-					<p>The cost function (or error function, or fitness function as the inverse) is some sort of measure of the
-						optimality of a chromosome. If we’re calling it “fitness function” then we’re shooting for higher scores,
-						and if we’re using “cost function” then we’re looking for low scores.</p>
+					<p>And finally in the “simulator” page you can see the result of this algorithm which could be pretty fun if you could change its parameters and see how it changes the result. Unfortunately I didn’t have enough time to learn jQuery and make it possible for visitors to set and change parameters of this algorithm. It is in the pipeline for me to improve on this website and add some histogram to track the performance of this algorithm with different setups.</p>
 
-					<h3>mating and death</h3>
-
-					<p>Mating is a fact of life, and we use it tons in GAs. Mating is a magical moment that two chromosomes
-						in love with each other share. The technical term for mating is “crossover”, but I’ll continue calling it
-						“mating” here, because that paints a more intuitive picture. We haven’t talked about “populations” in GAs yet
-						(we’ll get to that a bit later) but for now I’ll just say that when you run a GA, you don’t just look at one
-						chromosome at a time. You might have a population of 20 or 100 or 5,000 going all at once. Just like in evolution,
-						you might be inclined to have the best and strongest chromosomes of the population mate with each other,
-						with the hope that their offspring will be even healthier than either parent. Mating strings, like in our
-						“Hello, World!” example is pretty easy. You can pick two candidates (two strings; two chromosome) and
-						pick a point in the middle of the string. This point can be dead-center if you want, or randomized if you prefer.
-						Experiment with it! Take that middle point (called a “pivot” point), and make two new chromosomes by combining the
-						first half of one with the second half of the other and vice versa.Take these two strings for example:</p>
-
-					<ul>
-						<li>Hello, wprld! <strong>(1)</strong></li>
-						<li>Iello, world! <strong>(1)</strong></li>
-					</ul>
-
-					<p>Cutting them in half and making two new strings from the alternating halves gives us these two new “children”:</p>
-
-					<ul>
-						<li>Iello, wprld! <strong>(2)</strong></li>
-						<li>Hello, world! <strong>(0)</strong></li>
-					</ul>
-
-					<p>As you can see, the offspring includes one bastard child that has the worst traits of both parents,
-						but also an angel child that has the best traits of both.Mating is how you get from one generation
-						of genes to the next.</p>
-
-					<h3>mutation</h3>
-
-					<p>Mating alone has a problem: in-breeding. If all you do is mate your candidates to go from generation
-						to generation, you’ll get stuck near a “local optimum”: an answer that’s pretty good but not necessarily
-						the “global optimum” (the best you can hope for). Think of the world that these genes are living in as
-						a physical setting. It’s really hilly with all sorts of weird peaks and valleys. There is one valley that’s
-						the lowest of all, but there are also tons of other little valleys — while these other valleys are lower
-						than the land directly around them, they’re still above sea-level overall. Searching for a solution is
-						like starting a bunch of balls on the hills in random places. You let the balls go and they roll downhill.
-						Eventually, the balls will get stuck in the valleys — but many of them will get stuck in the random
-						mini-valleys that are stilly pretty high up the hill (the local optima). It’s your job to make sure
-						at least one of the balls ends up in the lowest point on the whole map: the global optimum.
-						Since the balls all start in random places, it’s hard to do this from the outset, and it’s impossible
-						to predict which ball will get stuck where. But what you can do is visit a bunch of the balls at random
-						and give them a kick. Maybe the kick will help, maybe it’ll hurt — but the idea here is to shake up the system
-						a little bit to make sure things aren’t getting stuck in local optima for too long. This is called mutation.
-						It’s a completely random process by which you target an unsuspecting chromosome and blast it with just enough
-						radiation to make one of its letters randomly change.</p>
-
-					<h3>the population</h3>
-
-					<p id="lastP">The population is a group of chromosomes. The population generally remains the same size but will
-						typically evolve to better average cost scores over time. You get to choose your population size.
-						I picked 20 for mine below, but you could choose 10 or 100 or 10,000 if you want. There are advantages and disadvantages</p>
+					<p id="lastP">Here are two pictures from the process of writing this Genetic Algorithm<img src="board1.jpg" class="small" id="smart_thumbnail"><img src="board2.jpg" class="small" id="smart_thumbnail2"></p>
 				</div>
 			</article>
 
