finishing the content

--- a/code.html
+++ b/code.html
@@ -112,8 +112,7 @@
 				</div>
 			</article>
 
-			<aside class = "sideBox">
-				<github-card class:"gitcard" user="siafahim"></github-card>
+			<aside class = "codeSideBox">
 				<div id="disqus_thread">
 					<script>
 						(function() { // DON'T EDIT BELOW THIS LINE
@@ -127,6 +126,8 @@
 					</script>
 					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 				</div>
+				<github-card class:"gitcard" user="siafahim"></github-card>
+				
 			</aside>
 		</main>
 
