finishing the content

--- a/code.html
+++ b/code.html
@@ -59,8 +59,6 @@
 				</header>
 
 				<div id="content">
-					<h3></h3>
-
 					<p>I will be very brief about every code block, although I'd like to explain more, but I won't have enough time at this moment.</p>
 
 					<p>I defined constant parameters of this algorithm on top of all the other functions so they can access these variables whenever they need them. These parameters can change performance of algorithm </p>
@@ -108,11 +106,11 @@
 					<p>and finally this is the last function which starts the whole process and outputs the result.</p>
 					<img src="sc15.png" class="pic" width="85%">
 
-
+					<p>Here is my <a href="https://github.com/SiaFahim/WeaselGA">GitHub</a> repo for this project.</p>
 				</div>
 			</article>
 
-			<aside class = "codeSideBox">
+			<!-- <aside class = "codeSideBox">
 				<div id="disqus_thread">
 					<script>
 						(function() { // DON'T EDIT BELOW THIS LINE
@@ -126,10 +124,9 @@
 					</script>
 					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 				</div>
-				
 				<github-card class:"gitcard" user="siafahim"></github-card>
 				
-			</aside>
+			</aside> -->
 		</main>
 
 		<footer class = "footBox">
