--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 					<p>And finally in the “simulator” page you can see the result of this algorithm which could be pretty fun if you could change its parameters and see how it changes the result. Unfortunately I didn’t have enough time to learn jQuery and make it possible for visitors to set and change parameters of this algorithm. It is in the pipeline for me to improve on this website and add some histogram to track the performance of this algorithm with different setups.</p>
 
-					<p id="lastP">Here are two pictures from the process of writing this Genetic Algorithm<img src="board1.jpg" class="small" id="smart_thumbnail"><img src="board2.jpg" class="small" id="smart_thumbnail2"></p>
+					<p id="lastP">Here are two pictures from the process of writing this Genetic Algorithm<img src="board1.jpg" alt="Smiley face" class="small" id="smart_thumbnail"><img src="board2.jpg" alt="Smiley face" class="small" id="smart_thumbnail2"></p>
 				</div>
 			</article>
 
