--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 						that artificial neural networks (“NN”) are also modeled from biology: evolution is the best general-purpose learning
 						algorithm we’ve experienced, and the brain is the best general-purpose problem solver we know. These are two very
 						important pieces of our biological existence, and also two rapidly growing fields of artificial intelligence and
-						machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm”
-						and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
+						machine learning study.</p>
 
 					<h3>Genetic Algorithm Basics</h3>
 
